--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i": "^0.3.7",
     "npm": "^9.6.4",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
