--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i": "^0.3.7",
     "npm": "^9.6.4",
     "num2persian": "^3.2.2",
+    "number-formatierer": "^1.0.2",
     "nums2persian": "^1.0.23",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
